--- a/LineUp Four Game/gamestyles.css
+++ b/LineUp Four Game/gamestyles.css
@@ -7,6 +7,7 @@
     }
     .wrapper {
         width: 33.75em;
+        height: 38.5em;
         background-color:rgb(56, 56, 56);
         position: absolute;
         padding: 2em;
@@ -96,4 +97,45 @@
         margin-bottom: 1em;
         color: #ffffff;
         font-size: 1.2em;
+    }
+
+
+    @media(max-width: 500px){
+        .wrapper {
+            width: 17.75em;
+            height: 28.5em;
+        }
+        .container {
+            margin: 1.25em auto;
+            width: 17.75em;
+            border-radius: 0.6em;
+            overflow: hidden;
+            background-color: #416cea;
+        }
+
+        .grid-box {
+            width: 3em;
+            height: 3em;
+            display: grid;
+            place-items: center;
+            background: radial-gradient(white 0.9em, #e3ea07 0.68em);
+            cursor: pointer;
+        }
+
+        .player1:before {
+            content: "";
+            display: inline-block;
+            width: 2.12em;
+            height: 2.12em;
+            border-radius: 50%;
+            background: radial-gradient(#4042de 0.6em, #1107d6 1.25em);
+        }
+        .player2:before {
+            content: "";
+            display: inline-block;
+            width: 2.12em;
+            height: 2.12em;
+            border-radius: 50%;
+            background: radial-gradient(#ba2410 0.5em, #930707 1.25em);
+        }
     }
